# geo_neural_op

./: README.md  pyproject.toml
examples/: README.md
examples/mean_flow_constrained/: catenoid_constrained.py  sphere_constrained.py
examples/mean_flows_01/: mean_flow.ipynb
examples/train_curvature_01/: README.md  run_01.sh  train_curvature_estimator.py
gnp/: utils.py
gnp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
