[project]
name = "gnp"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "numpy~=2.4.0",
    "PyYAML~=6.0.3",
    "scipy~=1.16.3",
    "torch~=2.6.0",
    "torch_geometric~=2.7.0",
    "torch_scatter~=2.1.2",
    "torch_cluster~=1.6.3",
    "tqdm~=4.67.1"
]
description = "Geometric Neural Operators"
readme = "README.md"
license = {text = "GNU GPLv3"}
authors = [
    {name = "Blaine Quackenbush", email = "bquackenbush@ucsb.edu"},
    {name = "Paul J. Atzberger", email = "atzberg@ucsb.edu"}
    ]

[project.urls]
Homepage = "https://github.com/atzberg/geo_neural_op"
Repository = "https://github.com/atzberg/geo_neural_op"
Documentation = "https://web.math.ucsb.edu/~atzberg/geo_neural_op_docs/html/index.html"



[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pyvista",
    "pyamg"
]

[tool.setuptools.packages.find]
include = ["gnp"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
